--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,10 +3,10 @@ server.servlet.context-path=/segip/api
 
 
 #Database connection
-spring.datasource.url=jdbc:postgresql://segipdb:5432/segip
-#spring.datasource.url=jdbc:postgresql://localhost:5432/segip
-spring.datasource.username=postgres
-spring.datasource.password=password
+#spring.datasource.url=jdbc:postgresql://segipdb:5432/segip
+spring.datasource.url=jdbc:postgresql://db-postgresql-nyc1-91891-do-user-9769284-0.b.db.ondigitalocean.com/defaultdb
+spring.datasource.username=doadmin
+spring.datasource.password=AVNS_8f_6imysHNtjAMK-aIH
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.driver-class-name=org.postgresql.Driver
