feat(master): update github actions

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.servlet.context-path=/segip/api
 
 #Database connection
 #spring.datasource.url=jdbc:postgresql://segipdb:5432/segip
-spring.datasource.url=jdbc:postgresql://db-postgresql-nyc1-91891-do-user-9769284-0.b.db.ondigitalocean.com/defaultdb
+spring.datasource.url=jdbc:postgresql://db-postgresql-nyc1-91891-do-user-9769284-0.b.db.ondigitalocean.com:25060/defaultdb?sslmode=require
 spring.datasource.username=doadmin
 spring.datasource.password=AVNS_8f_6imysHNtjAMK-aIH
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
