--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,8 +55,6 @@ jobs:
       - name: Push image to DO Container Registry
         run: docker push registry.digitalocean.com/denuncity-registry/ms-segip-simulation:1.0.0
 
-#      - name: Remove old images from Container Registry
-#        uses: ripplr-io/docr-image-remove@v1
-#        with:
-#          image_repository: ms-segip-simulation # required
-#          buffer_size: 10
+#      - name: Clean up old images
+#        run: echo "y" | doctl registry repository delete-manifests denuncity-registry/ms-segip-simulation --keep 1
+
